[package]
name = "tron"
description = "A rust based template system built for speed and simplicity."
license = "MIT"
version = "1.0.0"
edition = "2021"

[dependencies]
tempfile = { version = "3.2.0", optional = true }
which = { version = "7.0.1", optional = true }
thiserror = "2.0.11"
regex = "1.11.1"

[features]
default = []
execute = ["tempfile", "which"]